added a comment section to the pizza page and then added pictures to the pizza page as well

--- a/MainApp/templates/mainapp/index.html
+++ b/MainApp/templates/mainapp/index.html
@@ -2,8 +2,8 @@
 
 {% block page_header %}
 <div class="jumbotron">
-    <h1 class="display-4">Pizzeria Pizza</h1>
-    <p class="lead">Welcome to Pizzeria Pizza!</p>
+    <h1 class="display-4">Trip's Premier Pizza</h1>
+    <p class="lead">Welcome to Trip's Premier Pizza!</p>
     <hr class="my-4">
     <p>Select Pizzas below to view all available Pizzas</p>
     <p class="lead">
