--- a/MainApp/templates/mainapp/pizzas.html
+++ b/MainApp/templates/mainapp/pizzas.html
@@ -1,7 +1,7 @@
 {% extends "MainApp/base.html" %}
 
 {% block page_header %}
-<h1>Pizzeria's Pizzas</h1>
+<h1>Trip's Premier Pizzas</h1>
 {% endblock page_header %}
 
 {% block content %}
